# SuperKMeans

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BENCHMARKING.md  CMakeLists.txt  CONTRIBUTING.md  DartConfiguration.tcl  INSTALL.md  README.md  bench.cpp  bench.py  bench_gen.py  bench_kernels.cpp  bench_kmeans.cpp  bench_kmeans_faiss.cpp  bench_kmeans_fastkmeans.py  bench_kmeans_lorann.cpp  bench_kmeans_scikit.py  bench_pdxearch_utils.cpp  pyproject.toml  test_assign.cpp  test_unrotate.cpp
.github/workflows/: ci.yml  wheels.yml
benchmarks/: CMakeLists.txt  ad_hoc_assign.cpp  ad_hoc_balanced_superkmeans.cpp  ad_hoc_hierarchical_superkmeans.cpp  ad_hoc_superkmeans.cpp  bench_kmeans.cpp  bench_utils.h  bench_utils.py  cohere_bench_faiss.cpp  cohere_bench_superkmeans.cpp  early_termination.sh  early_termination_faiss.cpp  early_termination_scikit.py  early_termination_superkmeans.cpp  elkan.py  elkan.sh  end_to_end.sh  end_to_end_cuvs_kmeans_clustering.cpp  end_to_end_faiss.cpp  end_to_end_fastkmeans.py  end_to_end_gpu.cpp  end_to_end_gpu_ivf.cpp  end_to_end_mlpack.py  end_to_end_scikit.py  end_to_end_scikit_mini.py  end_to_end_superkmeans.cpp  gpu_faiss.cpp  iters_scikit.py  iters_scikit.sh  pareto.sh  pareto_superkmeans.cpp  pruning_bailout_analysis_superkmeans.cpp  report.ncu-rep  report1.nsys-rep  run_benchmarks.py  sampling.sh  sampling_superkmeans.cpp  scalability.sh  setup_data.py  setup_ground_truth.py  (+7 more)
benchmarks/early_termination/: early_termination_faiss.cpp  early_termination_scikit.py  early_termination_superkmeans.cpp
benchmarks/end_to_end/: end_to_end_avoc.py  end_to_end_evoc.py  end_to_end_faiss.cpp  end_to_end_hierarchical.cpp  end_to_end_scikit.py  end_to_end_superkmeans.cpp
benchmarks/ground_truth/: arxiv.json  cohere50m.json  contriever.json  fmnist.json  gist.json  glove100.json  glove50.json  mxbai.json  openai.json  sift.json  wiki.json
benchmarks/iters/: iters_scikit.py
benchmarks/microbenchmarks/: microbenchmark_flip_sign.cpp  microbenchmark_horizontal_kernels.cpp  microbenchmark_init_positions_array.cpp
benchmarks/pareto/: pareto_balanced_superkmeans.cpp  pareto_hierarchical_superkmeans.cpp  pareto_superkmeans.cpp
benchmarks/plotter/: README.md  plot_pruning_bailout_analysis.py  plot_sweet_pruning_spot.py  plot_varying_k.py  run_plotter.sh
benchmarks/results/: Untitled.ipynb  plotter_sampling.ipynb
benchmarks/results/blogpost/: blog_post_1_zen5.csv  varying_k_graniterapids.csv
benchmarks/results/default/: blog_post_1.csv  early_termination.csv  elkan.csv  end_to_end.csv  end_to_end_gpu_ivf.csv  iters_scikit.csv  pareto.csv  pareto_balanced.csv  pareto_hierarchical.csv  pruning_bailout_analysis.csv  sampling.csv  sampling_balanced.csv  scalability.csv  varying_k.csv  varying_k_gpu_faiss.csv  varying_k_superkmeans.csv
benchmarks/results/gpu/: varying_k.csv
benchmarks/results/graniterapids/: early_termination.csv  elkan.csv  end_to_end.csv  end_to_end_hierarchical.csv  iters_scikit.csv  pareto.csv  sampling.csv  varying_k.csv  varying_k_balanced.csv
benchmarks/results/graniterapids/pdx/: IVF2_PDX_ADSAMPLING.csv  IVF_FAISS.csv  IVF_PDX_ADSAMPLING.csv  hnsw_flat_usearch.csv
benchmarks/results/graviton4/: varying_k.csv
benchmarks/results/intel/: sampling.csv  sweet_pruning_spot.csv  varying_k.csv
benchmarks/results/m4/: pareto_balanced.csv  pareto_hierarchical.csv  sampling_100ppc.csv  sampling_hierarchical.csv  varying_k.csv
benchmarks/results/zen3/: end_to_end.csv  varying_k.csv
benchmarks/results/zen4/: varying_k.csv
benchmarks/results/zen5/: end_to_end.csv  varying_k.csv
benchmarks/sampling/: sampling_balanced_superkmeans.cpp  sampling_hierarchical_superkmeans.cpp  sampling_superkmeans.cpp
benchmarks/varying_k/: varying_k_faiss.cpp  varying_k_hierarchical_superkmeans.cpp  varying_k_scikit.py  varying_k_superkmeans.cpp
dockerfiles/: Dockerfile.cpu  Dockerfile.gpu  Makefile
examples/: CMakeLists.txt  README.md  hierarchical_clustering.cpp  simple_clustering.cpp
include/superkmeans/: balanced_superkmeans.h  common.h  hierarchical_superkmeans.h  profiler.h  profiler.hpp  stopwatch.h  superkmeans.h
include/superkmeans/distance_computers/: avx2_computers.h  avx2_computers.hpp  avx512_computers.h  avx512_computers.hpp  base_computers.h  base_computers.hpp  batch_computers.h  batch_computers.hpp  gpu_batch_computers.h  kernels.cu  kernels.cuh  neon_computers.h  neon_computers.hpp  scalar_computers.h  scalar_computers.hpp
include/superkmeans/gpu/: gpu.cuh
include/superkmeans/pdx/: adsampling.h  layout.h  pdx_ivf.h  pdxearch.h  utils.h
include/superkmeans/pdx/index_base/: pdx_ivf.hpp  pdx_ivf2.hpp
include/superkmeans/pdx/pruners/: adsampling.hpp  bond.hpp
python/bindings/: bindings.cpp
python/superkmeans/: __init__.py
python/tests/: test_superkmeans.py
scripts/: format.sh  format_check.sh  tidy_check.sh
tests/: CMakeLists.txt  cmake_test_discovery_2986c120f7.json  cmake_test_discovery_779738a405.json  cmake_test_discovery_b352784063.json  cmake_test_discovery_b76c2169d2.json  cmake_test_discovery_cae3cb2f28.json  cmake_test_discovery_d1de3f0544.json  cmake_test_discovery_eaf63a1927.json  generate_wcss_ground_truth.cpp  generate_wcss_ground_truth_balanced.cpp  generate_wcss_ground_truth_hierarchical.cpp  ground_truth_output.txt  test_assign.cpp  test_balanced_superkmeans.cpp  test_distance_computers.cpp  test_hierarchical_superkmeans.cpp  test_pdx_layout.cpp  test_rotation.cpp  test_superkmeans.cpp  test_wcss.cpp  unit_tests_list
